--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
 
    <!-- Add Firebase products that you want to use -->
   <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.5.1/firebase-ui-auth.css" />
   <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-database.js"></script>
    <script>
     // TODO: Replace the following with your app's Firebase project configuration
